--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "r-maze",
   "version": "0.1.0",
-  "homepage":"https://adet4ever.github.io/r-maze",
+  "homepage": "https://adet4ever.github.io/r-maze",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
     "konva": "^9.3.14",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-konva": "^18.2.10",
     "react-scripts": "5.0.1",
